# RVPT

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RVPT.cbp  cmake_install.cmake  contributors.md  project_configuration.json  rvpt
.github/workflows/: ci.yml
assets/: sobol.txt
assets/shaders/: bvh.glsl  camera.glsl  compute_pass.comp  compute_pass.comp.spv  debug_vis.frag  debug_vis.frag.spv  debug_vis.vert  debug_vis.vert.spv  defines.glsl  fullscreen_tri.vert  fullscreen_tri.vert.spv  integrators.glsl  intersection.glsl  material.glsl  samples_mapping.glsl  structs.glsl  tex_sample.frag  tex_sample.frag.spv  util.glsl
demo/: CMakeLists.txt  rvpt_demo_config.h.in
demo/include/: demo.h  imgui_helpers.h
demo/src/: demo.cpp  imgui_impl.cpp  main.cpp  window.cpp
rvpt/: CMakeLists.txt  rvpt_config.h.in
rvpt/include/rvpt/: camera.h  material.h  rvpt.h
rvpt/shaders/: compute_pass.comp.spv  distance_functions.glsl  structs.glsl
rvpt/src/: bvh.cpp  bvh_builder.cpp  camera.cpp  rvpt.cpp
scripts/: compile_shaders.bat  compile_shaders.sh  project_configuration.json.in
src/common/: camera.cpp  vk_util.h
src/demo/: engine.cpp  engine.h  main.cpp  window.cpp  window.h
src/rvpt/: bvh.cpp  bvh.h  bvh_builder.cpp  bvh_builder.h  bvh_node.cpp  bvh_node.h  camera.cpp  camera.h  geometry.h  imgui_helpers.h  imgui_impl.cpp  imgui_impl.h  main.cpp  material.h  rvpt.cpp  rvpt.h  time.cpp  time.h  timer.cpp  timer.h  vk_util.cpp  vk_util.h  window.cpp  window.h
util/: CMakeLists.txt
util/include/: vk_util.h
util/src/: vk_util.cpp
